k8s/network-policies/default-deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bhukkad-default-deny-egress
  namespace: bhukkad
  labels:
    app: bhukkad
spec:
  podSelector: {}
  policyTypes:
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bhukkad-default-deny-ingress
  namespace: bhukkad
  labels:
    app: bhukkad
spec:
  podSelector: {}
  policyTypes:
    - Ingress
